--- a/portfolio.html
+++ b/portfolio.html
@@ -213,6 +213,16 @@
 
                 </ul>
             </div>
+            <div class="conteiner-email">
+                <h3 class="footer-text">Subscribe</h3>
+                <input type="email" name="usser_email" class="footer-email"  placeholder="E-mail" required />
+            </div>
+            <div class="conteiner-button">
+                <button type="submit" class="footer-button">Subscribe</button>
+                <svg class="footer-imput" width="24" height="20">
+                    <use href="./images/iconss.svg#icon-Frame-3"></use>
+                </svg>
+            </div>
         </div>
 </footer>
     
