--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <label class="modal-form-feald">
                         <span class="modal-form-input-dasc">Email</span>
                         <span class="modal-form-input-wrapper">
-                            <input type="email" name="usser_email" class="modal-form-input" required />
+                            <input type="email" name="usser_email" class="modal-form-input" required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" />
                             <svg class="modal-form-input-icon" width="18" height="18">
                             <use href="./images/iconss.svg#icon-email"></use>
                         </svg>
