--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@
                         </ul>
                     </div>
                     <div class="conteiner-email">
-                        <h3 class="footer-text">Subscribe</h3>
-                        <input type="email" name="usser_email" class="footer-email"  placeholder="E-mail" required />
-                    </div>
-                    <div class="conteiner-button">
-                        <button type="submit" class="footer-button">Subscribe</button>
-                        <svg class="footer-imput" width="24" height="20">
+                        <p class="footer-text">Subscribe</p>
+                        <form class="footer-form">
+                            <input type="email" name="usser_email" class="footer-email"  placeholder="E-mail" required />
+                            <button type="submit" class="footer-button">Subscribe</button>
+                            <svg class="footer-icon" width="24" height="20">
                             <use href="./images/iconss.svg#icon-Frame-3"></use>
-                        </svg>
+                            </svg>
+                    </form>
                     </div>
                 </div>      
         </footer>
@@ -364,7 +364,7 @@
                         <span class="modal-form-input-dasc">Phone</span>
                         <span class="modal-form-input-wrapper">
                             <input type="tel" name="usser_phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
-                            <svg class="modal-form-input-icon" width="18" height="18">
+                            <svg class="modal-form-input-icon" width="18" height="24">
                             <use href="./images/iconss.svg#icon-phone"></use>
                         </svg>
                         </span>
@@ -372,18 +372,18 @@
                     <label class="modal-form-feald">
                         <span class="modal-form-input-dasc">Email</span>
                         <span class="modal-form-input-wrapper">
-                            <input type="email" name="usser_email" class="modal-form-input" required  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" />
-                            <svg class="modal-form-input-icon" width="18" height="18">
+                            <input type="email" name="usser_email" class="modal-form-input" required  />
+                            <svg class="modal-form-input-icon" width="18" height="24">
                             <use href="./images/iconss.svg#icon-email"></use>
                         </svg>
                         </span>
                     </label>
-                    <label class="modal-form-feald">
+                    <label class="modal-form-feald-comment">
                         <span class="modal-form-input-dasc">Comment</span>
                         <textarea name="usser_comment" class="modal-form-message" placeholder="Text input"></textarea>
                     </label>
                     <input id="usser-policy" type="checkbox" name="usser_policy" class="modal-form-check visually-hidden">
-                    <label for="usser-policy" class="modal-form-chack-dasc">I accept the terms and conditions of the&nbsp;<a href="">Privacy Policy</a> </label>
+                    <label for="usser-policy" class="modal-form-chack-dasc">I accept the terms and conditions of the&nbsp;<a href="" class="modal-form-link">Privacy Policy</a> </label>
                     <button type="submit" class="modal-form-submit">Send</button>
                 </form>
 
