--- a/portfolio.html
+++ b/portfolio.html
@@ -214,14 +214,14 @@
                 </ul>
             </div>
             <div class="conteiner-email">
-                <h3 class="footer-text">Subscribe</h3>
-                <input type="email" name="usser_email" class="footer-email"  placeholder="E-mail" required />
-            </div>
-            <div class="conteiner-button">
-                <button type="submit" class="footer-button">Subscribe</button>
-                <svg class="footer-imput" width="24" height="20">
+                <p class="footer-text">Subscribe</p>
+                <form class="footer-form">
+                    <input type="email" name="usser_email" class="footer-email"  placeholder="E-mail" required />
+                    <button type="submit" class="footer-button">Subscribe</button>
+                    <svg class="footer-icon" width="24" height="20">
                     <use href="./images/iconss.svg#icon-Frame-3"></use>
-                </svg>
+                    </svg>
+            </form>
             </div>
         </div>
 </footer>
